--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
   },
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "server": "nodemon index.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^9.0.0",
     "cookie-session": "^2.0.0",
     "express": "^4.18.2",
+    "material-ui": "^0.20.2",
     "mongoose": "^7.2.0",
     "nodemon": "^2.0.22",
     "passport": "^0.5.3",
